2004-09-22  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/geography/board1_0.xml.in: added country names in new tooltip entity
	* boards/geography/board2_0.xml.in:
	* boards/geography/board2_1.xml.in:
	* boards/geography/board3_0.xml.in:
	* boards/geography/board4_0.xml.in:
	* configure.in: changed to release 6.3RC1
	* src/boards/shapegame.c: (shapegame_init_canvas),
	(add_shape_to_list_of_shapes), (item_event), (item_event_ok),
	(create_shape), (add_xml_shape_to_data): create a new tooltip entity in the shape xml definition

2004-09-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/sounds/da/.cvsignore: missing
	* boards/sounds/da/alphabet/.cvsignore:
	* boards/sounds/da/colors/.cvsignore:
	* boards/sounds/da/geography/.cvsignore:
	* boards/sounds/da/misc/.cvsignore:
	* boards/wordsgame/wordslevel1.da: created by  Mogens Jaeger <mogensjaeger@get2net.dk>
	* boards/wordsgame/wordslevel2.da: created by  Mogens Jaeger <mogensjaeger@get2net.dk>
	* boards/wordsgame/wordslevelmax.da: created by  Mogens Jaeger <mogensjaeger@get2net.dk>
	* gcompris.spec.in: fixed for danish

2004-09-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Danish translation by Mogens Jaeger <mogensjaeger@get2net.dk>
	
	* boards/sounds/Makefile.am:
	* boards/sounds/da/alphabet/1.ogg:
	* boards/sounds/da/alphabet/10.ogg:
	* boards/sounds/da/alphabet/11.ogg:
	* boards/sounds/da/alphabet/12.ogg:
	* boards/sounds/da/alphabet/13.ogg:
	* boards/sounds/da/alphabet/14.ogg:
	* boards/sounds/da/alphabet/15.ogg:
	* boards/sounds/da/alphabet/16.ogg:
	* boards/sounds/da/alphabet/17.ogg:
	* boards/sounds/da/alphabet/18.ogg:
	* boards/sounds/da/alphabet/19.ogg:
	* boards/sounds/da/alphabet/2.ogg:
	* boards/sounds/da/alphabet/20.ogg:
	* boards/sounds/da/alphabet/3.ogg:
	* boards/sounds/da/alphabet/4.ogg:
	* boards/sounds/da/alphabet/5.ogg:
	* boards/sounds/da/alphabet/6.ogg:
	* boards/sounds/da/alphabet/7.ogg:
	* boards/sounds/da/alphabet/8.ogg:
	* boards/sounds/da/alphabet/9.ogg: