@@ -69,6 +69,6 @@
   <Shape name="F" pixmapfile="geography/europe/cyprus.png" type="SHAPE_BACKGROUND" x="683" y="521" zoomx="1" zoomy="1" position="0" sound="geography/cyprus">
       <_tooltip>cyprus</_tooltip>
   </Shape>
-  <Shape name="Z" pixmapfile="geography/europe/europe.jpg" type="SHAPE_BACKGROUND"
+  <Shape name="Z" pixmapfile="geography/europe/europe.png" type="SHAPE_BACKGROUND"
 	 x="420" y="260" zoomx="1" zoomy="1" position="0"/>
 </ShapeGame>
