@@ -37,7 +37,7 @@
 	<_data>bed/_ed/b/l/f</_data>
   </Board>
   <Board>
-  	<pixmapfile>biberon.png</pixmapfile>
+  	<pixmapfile>bottle.png</pixmapfile>
 	<_data>bottle/_ottle/b/t/p</_data>
   </Board>
   <Board>
@@ -85,7 +85,7 @@
 	<_data>bed/b_d/e/a/i</_data>
   </Board>
   <Board>
-  	<pixmapfile>biberon.png</pixmapfile>
+  	<pixmapfile>bottle.png</pixmapfile>
 	<_data>bottle/b_ttle/o/u/d</_data>
   </Board>
   <Board>
@@ -133,7 +133,7 @@
 	<_data>bed/be_/d/p/b</_data>
   </Board>
   <Board>
-  	<pixmapfile>biberon.png</pixmapfile>
+  	<pixmapfile>bottle.png</pixmapfile>
 	<_data>bottle/bott_e/l/y/r</_data>
   </Board>
   <Board>
