@@ -1,0 +1,1 @@
+SUBDIRS = alphabet colors geography misc
