@@ -34,9 +34,9 @@ AC_SUBST(LIBGCOMPRIS_AGE)
 
 AC_ISC_POSIX
 
-GTK_REQUIRED=2.0.3
-GDK_PIXBUF_REQUIRED=2.0.6
-LIBGNOMECANVAS_REQUIRED=2.0.2
+GTK_REQUIRED=2.4.0
+GDK_PIXBUF_REQUIRED=2.4.0
+LIBGNOMECANVAS_REQUIRED=2.4.0
 
 PKG_CHECK_MODULES(GCOMPRIS, gtk+-2.0 >= $GTK_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED libgnomecanvas-2.0 >= $LIBGNOMECANVAS_REQUIRED gthread-2.0)
 AC_CHECK_LIB(SDL_mixer, Mix_OpenAudio,, AC_MSG_ERROR([*** SDL_mixer not found. Visit http://www.libsdl.org and get it]))
@@ -445,7 +445,7 @@ AC_SUBST(VERSION_VOICES_GEOGRAPHY_PT)
 VERSION_VOICES_MISC_PT=1.1
 AC_SUBST(VERSION_VOICES_MISC_PT)
 
-VERSION_FLAGS=1.3
+VERSION_FLAGS=1.4
 AC_SUBST(VERSION_FLAGS)
 
 
